# agentic-robotics

./: .gitignore  ARCHITECTURAL_RECOMMENDATIONS.md  CLEANUP_ACTION_ITEMS.md  CRITICAL_ISSUES_QUICK_FIX.md  CROSS_PLATFORM_BUILD_STATUS.md  CROSS_PROJECT_INTEGRATION.md  Cargo.toml  ENHANCED_INTEGRATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_OPPORTUNITIES.md  ISSUES_REFERENCE.md  MIGRATION_TO_AGENTIC_ROBOTICS.md  NPM_PUBLICATION_GUIDE.md  NPM_TOKEN_TROUBLESHOOTING.md  NPM_VALIDATION_REPORT.md  PACKAGES_CREATED.md  PUBLISH_READINESS_REPORT.md  README.md  README_REVIEW.md  REVIEW_COMPLETION_SUMMARY.txt  SECURITY_AUDIT_EXECUTIVE_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SELF_LEARNING_IMPLEMENTATION.md  TECHNICAL_REVIEW_SUMMARY.md  package.json  ros3-optimization.db  swarm-orchestrator.js  swarm-review-config.json  vitest.config.ts
.claude/: settings.json
.claude/hooks/: optimization-loop.js  post-execution.js  pre-execution.js
crates/agentic-robotics-benchmarks/: Cargo.toml
crates/agentic-robotics-core/: Cargo.toml  README.md
crates/agentic-robotics-embedded/: Cargo.toml
crates/agentic-robotics-mcp/: Cargo.toml  README.md
crates/agentic-robotics-node/: Cargo.toml
crates/agentic-robotics-node/src/: lib.rs
crates/agentic-robotics-rt/: Cargo.toml
crates/ros3-benchmarks/: Cargo.toml
crates/ros3-core/: Cargo.toml
crates/ros3-core/src/: message.rs  publisher.rs
crates/ros3-embedded/: Cargo.toml
crates/ros3-mcp/: Cargo.toml
crates/ros3-mcp/src/: lib.rs
crates/ros3-node/: Cargo.toml
crates/ros3-node/src/: lib.rs
crates/ros3-rt/: Cargo.toml
docs/: COMPLETE_TEST_REPORT.md  ROBOT_TYPES.md  training-system.md
docs/guides/: FINAL_SUMMARY.md  QUICK_REFERENCE.md
docs/implementation/: COMPLETE_IMPLEMENTATION_SUMMARY.md  CURRENT_STATUS_AND_NEXT_STEPS.md  FIX_CHECKLIST.md  TESTING_AND_OPTIMIZATION_SUMMARY.md
docs/reviews/: AUDIT_DELIVERY_MANIFEST.md  REPOSITORY_CLEANUP_ANALYSIS.md  REVIEW_FINDINGS_SUMMARY.md  REVIEW_INDEX.md  REVIEW_README.md  REVIEW_SUMMARY.md  SWARM_REVIEW_CONSOLIDATED_REPORT.md  SWARM_REVIEW_SUMMARY.md
docs/security/: SECURITY_VULNERABILITIES_INDEX.md
docs/simulation/: README.md  api-reference.md  architecture.md  examples-guide.md  performance-tuning.md  robot-types.md  training-guide.md  troubleshooting.md
docs/technical/: COMMUNICATION_PROTOCOL_REVIEW.md  NETWORK_TRANSPORT_REVIEW.md  RT_EMBEDDED_TECHNICAL_REVIEW.md  TECHNICAL_REVIEW.md  TECHNICAL_REVIEW_MCP_INTEGRATION.md
examples/: README.md  run-all-tests.sh  test-autonomous-drone.ts  test-autonomous-vehicle.ts  test-industrial-robot.ts  training-example.ts
examples/autonomous-vehicles/: self-driving-car.ts
examples/data/: .gitignore
examples/drones/: autonomous-drone.ts
examples/industrial-robotics/: assembly-line-robot.ts
examples/robot-simulations/: quick-start.ts  test-all-robots.ts
examples/self-learning/: .eslintrc.json  .gitignore  LICENSE  PUBLISH.md  README.md  advanced-multi-objective-optimizer.ts  benchmark-optimizer.ts  index.ts  integration-adapter.ts  master-orchestrator.ts  metrics-validator.ts  package.json  parallel-swarm-executor.ts  performance-monitor.ts  quick-start.sh  self-improving-navigator.ts  swarm-orchestrator.ts  tsconfig.json  vitest.config.ts
examples/self-learning/cli/: benchmark.js  index.js  optimize.js  validate.js
examples/self-learning/examples/data/benchmarks/: benchmark-1763352611636.json  benchmark-1763352611636.md  benchmark-1763352612145.json  benchmark-1763352612145.md  benchmark-1763352758908.json  benchmark-1763352758908.md  benchmark-1763352759416.json  benchmark-1763352759416.md  benchmark-1763352899129.json  benchmark-1763352899129.md  benchmark-1763352899639.json  benchmark-1763352899639.md
examples/self-learning/examples/data/validation/: validation-1763352611336.json  validation-1763352611336.md  validation-1763352758605.json  (+3 more)
examples/self-learning/tests/: benchmark-optimizer.test.ts  metrics-validator.test.ts
examples/simulation/: README.md  assembly-line-sim.ts  benchmark-sim.ts  drone-delivery-sim.ts  humanoid-walking-sim.ts  learning-comparison-sim.ts  multi-robot-swarm-sim.ts  obstacle-course-sim.ts  warehouse-robot-sim.ts
npm/agentic-robotics/: .gitignore  README.md  package.json
npm/cli/: README.md  package.json
npm/core/: .npmignore  index.js  package.json
npm/linux-x64-gnu/: .npmignore  agentic-robotics.linux-x64-gnu.node  package.json
npm/mcp/: .npmignore  package.json
npm/mcp/src/: enhanced-server.ts  flow-orchestrator.ts  hybrid-memory.ts  index.ts  memory.ts
npm/mcp/src/training/: experience-replay.ts  index.ts  reinforcement-learning.ts  strategy-evolution.ts  training-coordinator.ts  training-environment.ts
src/robots/: base-robot.ts  drone-robot.ts  humanoid-robot.ts  index.ts  robotic-arm.ts  wheeled-robot.ts
src/simulation/: base-simulator.ts  environment.ts  index.ts  physics-engine.ts  sensor-simulator.ts
tests/docker/: .dockerignore  Dockerfile.complete-test  Dockerfile.enhanced-cli  Dockerfile.orchestration  Dockerfile.quick-test  Dockerfile.test  test-agent-orchestration.js  test-agent-orchestration.mjs  test-complete.sh  test-dialog-automated.sh  test-enhanced-cli.sh  test-mcp-server.sh  test-remote-install.js
tests/simulation/: README.md  integration.test.ts  multi-robot.test.ts  performance.test.ts  physics-engine.test.ts  robot-simulation.test.ts  sensor-simulation.test.ts  training-system.test.ts
