[package]
name = "ros3-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
ros3-core = { path = "../ros3-core" }
ros3-rt = { path = "../ros3-rt" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "message_serialization"
harness = false

[[bench]]
name = "pubsub_latency"
harness = false

[[bench]]
name = "executor_performance"
harness = false
